Fixed linked id search

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -1697,7 +1697,7 @@
             clear_inputs();
             var this_linked_id = $("#linked_id_select").val();
             $("#linked_id_input").val(this_linked_id);
-            var qp = '?linked_id=' + linked_id;
+            var qp = '?linked_id=' + this_linked_id;
             background_save(qp);
         }
 
