Fixed several labels, another conflict special case

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -12,7 +12,7 @@
         <meta charset="utf-8">{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    <meta name="description" content="Tigacrafting">
+    <meta name="description" content="MosquitoAlert">
     <meta name="author" content="Movement Ecology Laboratory">
 
     <title>{% block page_title %}Tigacrafting{% endblock %}</title>
@@ -364,7 +364,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label>Tags:</label>
+                        <label>Internal Tags:</label>
                         <div>
                             <ul id="tags_{{ form.instance.id }}">
                             </ul>
