--- a/tigacrafting/templates/tigacrafting/expert_report_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_status.html
@@ -12,10 +12,10 @@
         <meta charset="utf-8">{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    <meta name="description" content="Tigacrafting">
+    <meta name="description" content="MosquitoAlert">
     <meta name="author" content="Movement Ecology Laboratory">
 
-    <title>{% block page_title %}Tigacrafting Status{% endblock %}</title>
+    <title>{% block page_title %}MosquitoAlert Status{% endblock %}</title>
 
     {% block bootstrap_css %}
         <!-- Bootstrap core CSS -->
@@ -110,8 +110,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="navbar-brand"><span
-                                style="color:#ff9900; font-size: small">Tigatrapp
-                            Validation Status <i
+                                style="color:#ff9900; font-size: small">MosquitoAlert Validation Status <i
                                     id="gear"
                                     class="fa fa-refresh fa-spin"></i></span>
                         </div>
