--- a/tigacrafting/templates/tigacrafting/validated_photos.html
+++ b/tigacrafting/templates/tigacrafting/validated_photos.html
@@ -8,7 +8,7 @@
     {% block encoding %}<meta charset="utf-8">{% endblock  %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-    <meta name="description" content="Tigacrafting">
+    <meta name="description" content="MosquitoAlert">
     <meta name="author" content="Movement Ecology Laboratory">
 
     <title>{% block page_title %}Tigacrafting{% endblock %}</title>
