Fixed tigatrapp labels, another corner classification case

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -109,8 +109,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="navbar-brand"><span
-                                style="color:#ff9900; font-size: small">Tigatrapp
-                            Validation <i
+                                style="color:#ff9900; font-size: small">MosquitoAlert Validation <i
                                     id="gear"
                                     class="fa fa-refresh fa-spin"></i></span>
                         </div>
