--- a/stats/templates/stats/fix_user_chart.html
+++ b/stats/templates/stats/fix_user_chart.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-	<title>Tigatrapp Stats</title>
+	<title>MosquitoAlert Stats</title>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="http://code.highcharts.com/highcharts.js"></script>
