--- a/tigacrafting/templates/tigacrafting/expert_validation.html
+++ b/tigacrafting/templates/tigacrafting/expert_validation.html
@@ -90,7 +90,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <div id="gear" class="navbar-brand"><span style="color:#ff9900">Tigatrapp Expert Validation</span></div>
+                        <div id="gear" class="navbar-brand"><span style="color:#ff9900">MosquitoAlert Expert Validation</span></div>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
