--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -37,7 +37,7 @@
                         </button>
                         <div class="navbar-brand">
                             <span style="color:#ff9900; font-size: small">
-                                Tigatrapp Picture Validation
+                                MosquitoAlert Picture Validation
                                 <i id="gear" class="fa fa-refresh fa-spin"></i>
                             </span>
 
