Modified about files

--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -12,24 +12,17 @@
         <h1>Sobre Mosquito Alert</h1>
     </div>
 
-    <p>Aquest projecte és possible gràcies a la implicació creixent de moltes entitats públiques i privades, així com el suport de molts professionals.</p>
-
-<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a>, associat al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> i al <a href="http://www.creaf.cat/">CREAF</a>.</p>
-
-<p>El projecte ha estat impulsat per la Fundació Bancaria “la Caixa”.</p>
-
-   <p class='centeredImage'>
-    <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
+    <p>Aquest projecte està coordinat per les institucions <a href="http://www.icrea.cat/">ICREA</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y <a href="http://www.creaf.cat/">CREAF</a>.</p>
+    <p class="centeredImage">
+        <a href="/credits/"><img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_coord.jpg" %}></a>
     </p>
-
-
-<p>El projecte està cofinançat per L’Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut), el Ministeri d’Economia i Competitivitat, la Fundació Espanyola per a la Ciència i la Tecnologia (FECYT) i l’empresa lokímica.</p>
-
-<p>Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>.</p>
-
-    <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
+    <p>Des de 2015 el projecte està impulsat per l’ <a href="http://obrasociallacaixa.org/">Obra Social “la Caixa”</a>.</p>
+    <p class="centeredImage">
+        <img style="max-width: 100%; height: auto;" src={% static "tigahelp/lacaixa.jpg" %}>
+    </p>
+    <p>El projecte està cofinançat per l’ <a href="http://www.dipsalut.cat">Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministeri d’Economia i Competitivitat</a>, la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a> i l’empresa <a href="http://www.lokimica.com">Lokímica</a>.</p>
+    <p class="centeredImage">
+        <a href="/credits/"><img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_financ.jpg" %}></a>
     </p>
 
 {% endblock %}
