--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -12,29 +12,18 @@
         <h1>About Mosquito Alert</h1>
     </div>
 
-    <p>This project has been made possible thanks to the growing support of a number of public and private entities, as well as many professionals.</p>
-
-    <p>The project is coordinated by the 
-    <a href="http://www.movelab.net/">ICREA Movement Ecology Laboratory</a> at <a href="http://www.ceab.csic.es/">CEAB-CSIC</a> and <a href="http://www.creaf.cat">CREAF</a>.</p>
-
-    <p>The project is funded by the “la Caixa” Banking Foundation. </p>
-
-   <p class='centeredImage'>
-       <img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/lacaixa.jpg" %}>
-    </p>
-
-
-    <p>The project is co-financed by the Independent Public Health Body of Girona Provincial Council (Dipsalut), the Ministry of Economy and Competitiveness, the Spanish Foundation for Science and Technology (FECYT) and the private company lokímica.</p>
-
-
-    <p>Many of the photographs in the Mosquito Alert app have been donated by <a href="http://www.eritja.com">R. Eritja</a>.</p>
-
+    <p>This project is coordinated by the following institutions: <a href="http://www.icrea.cat/en">ICREA</a>, <a href="http://www.ceab.csic.es/en">CEAB-CSIC</a> and <a href="http://www.creaf.cat/en">CREAF</a>.</p>
     <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}></a>
     </p>
-
+    <p>Since 2015 the project has been funded by <a href="http://obrasociallacaixa.org/en/home">Obra Social “la Caixa”</a>.</p>
+    <p class='centeredImage'>
+       <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
+    </p>
+    <p>The project is co-financed by the <a href="http://www.dipsalut.cat">Independent Public Health Body of Girona Provincial Council (Dipsalut)</a>, the <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministry of Economy and Competitiveness</a>, the <a href="http://www.fecyt.es/en">Spanish Foundation for Science and Technology (FECYT)</a> and the <a href="http://www.lokimica.com">Lokímica</a> private company.</p>
+    <p class='centeredImage'>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}></a>
+    </p>
 
 
 {% endblock %}
