--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -12,24 +12,17 @@
         <h1>Sobre Mosquito Alert</h1>
     </div>
 
-
-    <p>Este proyecto es posible gracias a la implicación creciente de muchas entidades públicas y privadas, así como el apoyo de muchos profesionales.</p>
-
-    <p>El proyecto está coordinado por el <a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a> asociado al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y al <a href="http://www.creaf.cat/">CREAF</a>.</p>
-
-    <p>El proyecto ha sido impulsada por la Fundación Bancaria" la Caixa.</p>
-
-   <p class='centeredImage'>
-       <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
-   </p>
-
-
-    <p>El proyecto está cofinanciado por el Organismo Autónomo de Salud Pública de la Diputación de Girona (Dipsalut), el Ministerio de Economía y Competitividad, la Fundación Española para la Ciencia y la Tecnología (FECYT) y la empresa lokímica.</p>
-
-    <p>Las fotografías de la App Tigatrapp han sido cedidas por <a href="http://www.eritja.com">R. Eritja</a>.</p>
-
+    <p>Este proyecto está coordinado por las instituciones <a href="http://www.icrea.cat/es">ICREA</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y <a href="http://www.creaf.cat/es">CREAF</a>.</p>
     <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}></a>
     </p>
+    <p>Desde 2015 el proyecto està impulsado por la <a href="http://obrasociallacaixa.org/">Obra Social “la Caixa”</a>.</p>
+    <p class='centeredImage'>
+       <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
+    </p>
+    <p>El proyecto está cofinanciado por el <a href="http://www.dipsalut.cat">Organismo Autónomo de Salud Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministerio de Economía y Competitividad</a>, la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a> i la empresa <a href="http://www.lokimica.com">Lokímica</a>.</p>
+    <p class='centeredImage'>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}></a>
+    </p>
+
 {% endblock %}
